--- a/src/assets/styles/styles.sass
+++ b/src/assets/styles/styles.sass
@@ -19,9 +19,25 @@ body
  
 header
   width: 100vw
+  #fixed_nav_mobile
+    width: 100%
+    align-items: center
+    display: flex
+    padding: 1.8rem 0 
+    position: absolute
+    z-index: 1
+    #menu
+      right: 2rem
+      position: fixed
+
+      li
+        background-color: #2b3467
+        border-radius: 7px
+        padding: 0.5rem 0.7rem
+    
+
 
   #sticky_nav
-
     width: 100%
     z-index: 1
     position: absolute
@@ -238,7 +254,6 @@ main
     grid-template-columns: repeat(1, 1fr)
 
     .vacature-info
-      padding: 0 4rem
       h5
         margin: 0
         font-family: 'PP Neue Montreal Book'
@@ -458,6 +473,7 @@ main
       left: 4%
       bottom: 6%
       position: absolute
+      font-size: 3rem
       span
         color: #eb455f
 
@@ -712,3 +728,11 @@ footer
           color: white
           background-color: #2b3467
  
+@media screen and (min-width: 989px)
+  header
+    #fixed_nav_mobile
+      display: none
+    // #nav_trigger_down
+    //   display: none
+    // #sticky_nav
+    //   display: none
